--- a/Forecast/app/src/main/res/layout/weather_widget.xml
+++ b/Forecast/app/src/main/res/layout/weather_widget.xml
@@ -11,7 +11,15 @@
         tools:ignore="UnknownIdInLayout"
         android:layout_alignParentTop="true" />
         <!--android:layout_alignParentStart="true"--> <!--/>-->
-
+    <ImageButton
+        android:id="@+id/cityPickerBnt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:src="@drawable/ic_location_city"
+        android:layout_alignTop="@+id/tv_city"
+        android:layout_toRightOf="@+id/tv_city"
+        android:layout_toEndOf="@+id/tv_city" />
     <TextView android:id="@+id/tv_humidity" android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:text="Влажность 93%"
         android:layout_alignParentStart="true"
