--- a/Forecast/app/src/main/res/layout/activity_weather.xml
+++ b/Forecast/app/src/main/res/layout/activity_weather.xml
@@ -64,7 +64,7 @@
                             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                         <ImageButton
-                            android:id="@+id/cityPickerBnt"
+                            android:id="@+id/btnCityPicker"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="15dp"
