--- a/Forecast/app/src/main/res/layout/weather_widget.xml
+++ b/Forecast/app/src/main/res/layout/weather_widget.xml
@@ -35,9 +35,9 @@
     <TextView android:id="@+id/tv_temperature" android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:layout_gravity="right"
               android:text="1°C" android:textSize="50sp" android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignTop="@+id/tv_precipitation"
+        android:layout_alignRight="@+id/id_update"
+        android:layout_alignEnd="@+id/id_update" />
         <!--android:layout_alignParentEnd="true" />-->
 
     <ImageButton
@@ -63,6 +63,23 @@
         android:layout_alignTop="@+id/id_update"
         android:layout_toLeftOf="@+id/id_update"
         android:layout_toStartOf="@+id/id_update" />
-        <!--android:layout_toStartOf="@+id/id_update" />-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="--:--"
+        android:id="@+id/tv_date_time"
+        android:layout_below="@+id/tv_pressure"
+        android:layout_toLeftOf="@+id/id_update"
+        android:layout_toStartOf="@+id/id_update" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_description"
+        android:layout_below="@+id/tv_humidity"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <!--android:layout_toStartOf="@+id/id_update" />-->
 
 </RelativeLayout>
